syntax = "proto3";
package com.iohao.little.game.net.external.bootstrap.message;
option java_outer_classname = "ExternalMessage$$ByJProtobuf";
//对外数据协议
message ExternalMessage {
  // 请求命令类型: 0 心跳，1 业务
  sint32 cmdCode = 1;
  // 协议开关，用于一些协议级别的开关控制，比如 安全加密校验等。 : 0 不校验
  sint32 protocolSwitch = 2;
  // 业务路由（高16为主, 低16为子）
  sint32 cmdMerge = 3;
  // 响应码: 0:成功, 其他为有错误
  sint32 responseStatus = 4;
  // 验证信息: 当 responseStatus == -1001 时， 会有值
  string validMsg = 5;
  // 业务请求数据
  bytes dataContent = 6;
}
